@@ -1,5 +1,9 @@
 2024-09-28  Ulrich Müller  <ulm@gentoo.org>
 
+	* test/xemacs-test-wrapper.el (skip-unless): New function.
+	(test-skipped): New error symbol.
+	(ert-deftest): Handle it.
+
 	* ebuild-mode.el (ebuild-mode-enable-bug-reference):
 	New custom variable.
 	(ebuild-mode-bug-regexp, ebuild-mode-bug-url-format):
